Refactor user service: add refresh tokens and unify error handling
Introduces refresh token entity, repository, and services for secure token rotation and logout. Replaces multiple custom exceptions with a single CustomException and centralizes error handling. Refactors UserController endpoints to use unified ApiResponse, adds validation annotations to DTOs, and implements paginated user listing. OAuth2 login and token issuance are now handled via a centralized TokenService. Removes password from UserResponse and updates email/password validation logic.