@@ -1,16 +1,18 @@
 package org.example.userservice.services;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.userservice.dto.*;
 import org.example.userservice.entities.User;
-import org.example.userservice.exceptions.EmailAlreadyUsedException;
-import org.example.userservice.exceptions.InvalidEmailFormatException;
-import org.example.userservice.exceptions.InvalidPasswordFormatException;
+import org.example.userservice.entities.RefreshToken;
+import org.example.userservice.exceptions.CustomException;
 import org.example.userservice.repositories.UserRepository;
-import org.springframework.http.ResponseEntity;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -19,7 +21,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,84 +28,85 @@ import java.util.stream.Collectors;
 public class UserService {
 
     private final AuthenticationManager authenticationManager;
-    private final UserRepository repository;
-    private final UserMapper mapper;
+    private final UserRepository userRepository;
+    private final UserMapper userMapper;
     private final PasswordEncoder passwordEncoder;
     private final JwtService jwtService;
     private final UserDetailsService userDetailsService;
     private final EmailVerificationService emailVerificationService;
+    private final RefreshTokenService refreshTokenService;
 
+    // Register user
     public void register(RegisterRequest request) {
-        String email = request.email();
-        String password = request.password();
-
-        if (email == null || email.isBlank() || !email.matches("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$")) {
-            throw new InvalidEmailFormatException();
-        }
-        if (repository.existsByEmail(email)) {
-            throw new EmailAlreadyUsedException();
+        if (userRepository.existsByEmail(request.email())) {
+            throw new CustomException("Email already exists", HttpStatus.UNPROCESSABLE_ENTITY);
         }
 
-        if (password == null || password.isBlank() || !password.matches("(?=.*\\d)(?=.*[^A-Za-z0-9]).{8,}")) {
-            throw new InvalidPasswordFormatException();
-        }
-
-        User user = mapper.toUser(request);
+        User user = userMapper.toUser(request);
         user.setPassword(passwordEncoder.encode(user.getPassword()));
-        repository.save(user);
+        userRepository.save(user);
 
         try {
             emailVerificationService.createAndSendVerificationToken(user.getEmail());
         } catch (Exception ex) {
-            log.warn("Failed to send verification email for {}", user.getEmail(), ex);
+            throw new CustomException("Failed to send verification email", HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
-
+    // Authenticate & generate tokens
     public LoginResponse authenticate(LoginRequest request) {
         try {
             authenticationManager.authenticate(
                     new UsernamePasswordAuthenticationToken(request.email(), request.password())
             );
         } catch (Exception e) {
-            throw new BadCredentialsException("Invalid credentials");
+            throw new CustomException("Invalid credentials", HttpStatus.UNAUTHORIZED);
         }
 
         UserDetails userDetails = userDetailsService.loadUserByUsername(request.email());
         String accessToken = jwtService.generateAccessToken(userDetails);
-        String refreshToken = jwtService.generateRefreshToken(userDetails);
 
-        return new LoginResponse(accessToken, refreshToken);
+        User user = userRepository.findByEmail(request.email())
+                .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
+
+        RefreshToken refreshToken = refreshTokenService.createRefreshToken(user);
+
+        return new LoginResponse(accessToken, refreshToken.getToken());
     }
 
-
+    @Transactional
     public void delete(UUID id) {
-        repository.deleteById(id);
+        userRepository.deleteById(id);
     }
 
     public UserResponse findById(UUID id) {
-        return repository.findById(id)
-                .map(mapper::fromUser)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        return userRepository.findById(id)
+                .map(userMapper::fromUser)
+                .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
     }
 
-    public List<UserResponse> findAll() {
-        return repository.findAll().stream().map(mapper::fromUser).collect(Collectors.toList());
+    public PageResponse<UserResponse> findAllPaginated(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<User> result = userRepository.findAll(pageable);
+
+        List<UserResponse> users = result.getContent().stream()
+                .map(userMapper::fromUser)
+                .toList();
+
+        return new PageResponse<>(users, result.getNumber(), result.getSize(),
+                result.getTotalElements(), result.getTotalPages());
     }
 
+    @Transactional
     public void update(UUID id, RegisterRequest request) {
-        var user = repository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
 
-        if (request.firstname() != null && !request.firstname().isBlank()) {
-            user.setFirstname(request.firstname());
-        }
-        if (request.lastname() != null && !request.lastname().isBlank()) {
-            user.setLastname(request.lastname());
-        }
-        if (request.email() != null && !request.email().isBlank()) {
-            if (!user.getEmail().equals(request.email()) && repository.existsByEmail(request.email())) {
-                throw new IllegalArgumentException("Email already in use");
+        if (request.firstname() != null && !request.firstname().isBlank()) user.setFirstname(request.firstname());
+        if (request.lastname() != null && !request.lastname().isBlank()) user.setLastname(request.lastname());
+        if (request.email() != null && !request.email().isBlank() && !user.getEmail().equals(request.email())) {
+            if (userRepository.existsByEmail(request.email())) {
+                throw new CustomException("Email already in use", HttpStatus.UNPROCESSABLE_ENTITY);
             }
             user.setEmail(request.email());
         }
@@ -112,12 +114,12 @@ public class UserService {
             user.setPassword(passwordEncoder.encode(request.password()));
         }
 
-        repository.save(user);
+        userRepository.save(user);
     }
 
     public UserResponse findByEmail(String email) {
-        return repository.findByEmail(email)
-                .map(mapper::fromUser)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        return userRepository.findByEmail(email)
+                .map(userMapper::fromUser)
+                .orElseThrow(() -> new CustomException("User not found", HttpStatus.NOT_FOUND));
     }
 }
